# agenthound

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_attack_pattern.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  LAUNCH_PLAN.md
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EmptyState.tsx  PathDetail.tsx  PathList.tsx  SummaryBar.tsx  Topbar.tsx
frontend/src/components/graph/: AttackGraph.tsx  GraphNodeCard.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts  visual.ts
src/agenthound/: __init__.py  cli.py  scan.py
src/agenthound/catalog/: attack_patterns.py
src/agenthound/data/samples/: claude_desktop_config.json  mcp_tool_catalog.json
src/agenthound/graph/: __init__.py  analyzer.py  builder.py
src/agenthound/models/: __init__.py  schema.py
src/agenthound/parsers/: __init__.py  claude_desktop.py  mcp_tools.py
src/agenthound/server/: __init__.py  app.py
tests/: test_analyzer.py  test_cli.py  test_graph.py  test_parsers.py  test_server.py
