[project]
name = "agenthound"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ginjiro Kinoshita", email = "74758734+ginjiro1216@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "networkx>=3.6.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "rich>=15.0.0",
    "typer>=0.25.0",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
agenthound = "agenthound:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
